--- a/test.csproj
+++ b/test.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="EasyEncryption" Version="1.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
